--- a/java/springboot/Dockerfile
+++ b/java/springboot/Dockerfile
@@ -1,6 +1,10 @@
-FROM fabric8/java-jboss-openjdk8-jdk:1.5.4
-USER jboss 
+FROM gcr.io/cloud-builders/mvn as builder
+COPY . /project
+CMD ["-B","-DskipTests", "install" ]
+
+FROM docker.io/fabric8/java-jboss-openjdk8-jdk:1.5.4
+USER jboss
 ENV JAVA_APP_DIR=/deployments
 EXPOSE 8080
-COPY target/event-greeter.jar /deployments/
+COPY --from=builder /project/target/event-greeter.jar /deployments/
 ENTRYPOINT [ "/deployments/run-java.sh" ]
