Using multi stage docker build using numeric identifier

--- a/java/springboot/Dockerfile
+++ b/java/springboot/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/cloud-builders/mvn as builder
+FROM gcr.io/cloud-builders/mvn
 COPY . /project
 CMD ["-B","-DskipTests", "install" ]
 
@@ -6,5 +6,5 @@ FROM docker.io/fabric8/java-jboss-openjdk8-jdk:1.5.4
 USER jboss
 ENV JAVA_APP_DIR=/deployments
 EXPOSE 8080
-COPY --from=builder /project/target/event-greeter.jar /deployments/
+COPY --from=0 /project/target/event-greeter.jar /deployments/
 ENTRYPOINT [ "/deployments/run-java.sh" ]
