--- a/java/springboot/pom.xml
+++ b/java/springboot/pom.xml
@@ -36,6 +36,10 @@
       <artifactId>vertx-core</artifactId>
       <version>3.6.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
