--- a/java/springboot/Dockerfile
+++ b/java/springboot/Dockerfile
@@ -3,7 +3,7 @@ COPY . /project
 WORKDIR /project
 RUN mvn -Duser.home=/builder/home -B -DskipTests install
 
-FROM fabric8/java-jboss-openjdk8-jdk:1.5.4
+FROM quay.io/gbengataylor/java-jboss-openjdk8-jdk:1.5.4
 USER jboss
 ENV JAVA_APP_DIR=/deployments
 EXPOSE 8080
